# Phase2_Group112

./: .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  ReadMe.md  ReadMe.txt  SETUP.md  TASKS.md  app.js  debug_parser.py  debug_scorer.py  debug_tests.py  index.html  input_many.txt  input_two.txt  log-9-23.txt  logCurrent.txt  parser_output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run  run.cmd  run.ps1  run.py  run.sh  run_status.txt  style.css
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
backend/: .gitignore  samconfig.toml  template.yaml
docs/: SETUP.md
metrics-cli/: .flake8  pyproject.toml  run  run.ps1  run.py  run.sh
metrics-cli/input/: sample_input.json
metrics-cli/output/: sample_output.json
metrics-cli/scripts/: format.sh  lint.sh  test.sh
metrics-cli/src/: cli.py
metrics-cli/src/metrics/: code_quality.py  performance_claims.py  protocol.py  size.py
metrics-cli/src/utils/: parse_input.py
metrics-cli/tests/: test_cli.py  test_dataset_and_code_score.py  test_dataset_quality.py  test_liscense.py  test_output_format.py  test_performance_claims.py  test_ramp_up.py  test_scorer.py
scripts/: format.sh  lint.sh  test.sh
src/: cli.py  init.py  main.py  scorer.py  scorer2.py
tests/: conftest.py  test_artifacts_roundtrip.py  test_bus_factor.py  test_code_quality.py  test_data_quality.py  test_dataset_and_code_score.py  test_dataset_quality.py  test_main.py  test_parse_input.py  test_performance_claims.py  test_protocol.py  test_ramp_up.py  test_runpy.py  test_scorer.py  test_size.py  (+1 more)
(+53 files in other folders)
